# BCross

./: .gitignore  CMakeLists.txt
config/: config.example.json
include/: IOthreads.h  config_reader.h  listener.h  main.h
src/: BCross.cpp  IOthreads.cpp  config_reader.cpp  listener.cpp  main.cpp  worker.cpp
